--- a/backend/加入登录功能版management_api/management_api/package.json
+++ b/backend/加入登录功能版management_api/management_api/package.json
@@ -10,10 +10,11 @@
     "start": "node ljholding_backend_manage_server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
-    "mysql2": "^3.11.3",
-    "bcryptjs": "^2.4.3",        
-    "jsonwebtoken": "^9.0.2"   
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3"
   }
 }
